--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   file_picker: ^4.3.3
   syncfusion_flutter_pdfviewer: ^19.4.48-beta
   flutter_countdown_timer: ^4.1.0
+  advance_pdf_viewer: ^2.0.1
+  youtube_player_flutter: ^8.0.0
 
 
 
