--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.2
 
 environment:
   sdk: ">=2.16.0-85.0.dev <3.0.0"
@@ -57,6 +57,7 @@ dependencies:
   flutter_countdown_timer: ^4.1.0
   advance_pdf_viewer: ^2.0.1
   youtube_player_flutter: ^8.0.0
+  badges: ^2.0.2
 
 
 
